# iansdonnelly-libelektra

GSoC 2014/: Learning  MAN_KDB_MERGE  Schedule  Testing  kdb  libelektra-augeas4_0.8.6-1_amd64.deb  libelektra-augeas4_0.8.6-2_amd64.deb  libelektra-python4_0.8.6-2_amd64.deb  samba_elektra.patch
GSoC 2014/Tutorials/: Plug-In Pt1.txt  Plug-In Pt2.txt  Plug-In Pt3.txt
cmake/: ElektraCache.cmake
debian/: control  kdb.1  libelektra-lua4.install  libelektra-python4.install
scripts/: benchmark-createtree  benchmark_augeas_hosts.sh  benchmark_libsplit.sh  configure-debian-musl  configure-debian-wheezy  configure-home  configure-ini  configure-mingw-w64  configure-xdg  convert-fstab  convert-hosts  convert-inittab  convert-users  elektra-merge  elektra-mount  elektra-umount
src/libelektra/: keyhelpers.c  keyname.c  keyset.c  keyvalue.c  plugin.c
src/libloader/: static.c
src/libtools/include/: mergetools.hpp
src/libtools/src/: backend.cpp  backends.cpp  mergetools.cpp
src/libtools/tests/: CMakeLists.txt  testcpp_merge.cpp
src/libtools/tests/gtest/: CMakeLists.txt
src/plugins/fstab/: REAMDE.md
src/plugins/hosts/: README.md  hosts.c  testmod_hosts.c
src/plugins/line/: CMakeLists.txt  line.c  testmod_line.c
src/plugins/struct/: checker.hpp  factory.hpp
src/plugins/tcl/: action.cpp
src/plugins/type/: testmod_type.cpp  types.hpp
src/plugins/xmltool/: kdbtools.c  kscompare.c  stream.c  testmod_xmltool.c
src/plugins/yajl/: array.c  iterator.c
src/tools/kdb/: cmdline.cpp  merge.cpp  merge.hpp  (+1 more)
tests/: test_key.c  tests.c
tests/cframework/: tests.c
(+8 files in other folders)
